--- a/style.css
+++ b/style.css
@@ -1,16 +1,11 @@
-/* Class (varios elementos)
-Id (Un elemento) */
-
-body{
-    background-color: rgb(20, 20, 20);
-    color: whitesmoke;
-}
+/* Etiqueta (todos los elementos)
+Class (varios elementos)
+Id un elemento) */
 
 p{
     width: 700px;
     font-size: 15px;
     font-family: monospace;
-    color: rgb(132, 238, 132);
 }
 
 img{
@@ -18,39 +13,27 @@ img{
 }
 
 .p-y-img-1{
-    border: 4px;
-    border-style: solid;
-    border-color: red;
+    border: 4px solid red;
 }
 
 .p-y-img-2{
-    border: 4px;
-    border-style: solid;
-    border-color: yellow;
-    border-width: 400px;
+    border: 4px solid yellow;
+    width: 400px;
 }
 
 .p-y-img-3{
-    border: 4px;
-    border-style: solid;
-    border-color: green;
+    border: 4px solid green;
 }
 
 .p-y-img-4{
-    border: 4px;
-    border-style: solid;
-    border-color: blue;
-    border-width: 500px;
+    border: 4px solid blue;
+    width: 500px;
 }
 
 #p5{
-    border-bottom: 4px;
-    border-style: solid;
-    border-color: grey;
+    border-bottom: 4px solid grey;
 }
 
 #img5{
-    border: 4px;
-    border-style: dotted;
-    border-color: black;
+    border: 4px dotted black;
 }
